simplified startup + gui handles server offline